--- a/.gitignore
+++ b/.gitignore
@@ -127,3 +127,10 @@ dmypy.json
 
 # Pyre type checker
 .pyre/
+
+
+data/Federated_CIFAR100_TFF
+data/Federated_EMNIST_TFF
+data/Federated_Shakespeare_FedProx
+data/Federated_Shakespeare_TFF
+data/Federated_StackOverFlow_TFF
