--- a/.gitignore
+++ b/.gitignore
@@ -134,3 +134,4 @@ data/Federated_EMNIST_TFF
 data/Federated_Shakespeare_FedProx
 data/Federated_Shakespeare_TFF
 data/Federated_StackOverFlow_TFF
+data/MNIST
