--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -5,12 +5,24 @@
     "version": "0.2.0",
     "configurations": [
         {
+            "name": "Python: 当前文件",
+            "type": "python",
+            "request": "launch",
+            "program": "${file}",
+            "console": "integratedTerminal"
+        },
+        {
             "name": "Python: client",
             "type": "python",
             "request": "launch",
             "program": "main.py",
             "console": "integratedTerminal",
-            "args": ["--rank", "1", "--world_size", "2"]
+            "args": [
+                "--rank",
+                "1",
+                "--world_size",
+                "2"
+            ]
         },
         {
             "name": "Python: server",
@@ -18,7 +30,12 @@
             "request": "launch",
             "program": "main.py",
             "console": "integratedTerminal",
-            "args": ["--rank", "0", "--world_size", "2"]
+            "args": [
+                "--rank",
+                "0",
+                "--world_size",
+                "2"
+            ]
         }
     ]
 }
