--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -27,8 +27,8 @@
                 "output_dim:10",
                 "--samples",
                 "10",
-                "--agg",
-                "elastic"
+                "--pipe",
+                "scaffold"
             ]
         },
         {
@@ -47,8 +47,8 @@
                 "output_dim:10",
                 "--samples",
                 "10",
-                "--agg",
-                "elastic"
+                "--pipe",
+                "scaffold"
             ]
         }
     ]
