--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -15,7 +15,7 @@
             "name": "Python: client",
             "type": "python",
             "request": "launch",
-            "program": "main.py",
+            "program": "benchmark/main.py",
             "console": "integratedTerminal",
             "args": [
                 "--fed_rank",
@@ -35,7 +35,7 @@
             "name": "Python: server",
             "type": "python",
             "request": "launch",
-            "program": "main.py",
+            "program": "benchmark/main.py",
             "console": "integratedTerminal",
             "args": [
                 "--fed_rank",
