--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -10,12 +10,16 @@
     },
     "explorerExclude.backup": null,
     "cSpell.words": [
+        "CIFAR",
         "Decronym",
         "FEMNIST",
         "Hoch",
         "Jailbrea",
         "LSTM",
+        "MNIST",
         "Mafiya",
+        "Pachinko",
+        "Partitioner",
         "Roboragi",
         "Studabaker",
         "Vkrrs",
@@ -48,6 +52,8 @@
         "jsons",
         "koja",
         "matmul",
+        "mkdir",
+        "multinomial",
         "nicsgalleries",
         "niid",
         "nikforce",
@@ -76,6 +82,7 @@
         "tolist",
         "transcribersofreddit",
         "tuser",
+        "unxz",
         "wfhd",
         "whitespaces",
         "wtype",
