--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -11,6 +11,7 @@
     "explorerExclude.backup": null,
     "cSpell.words": [
         "CIFAR",
+        "Conv",
         "Decronym",
         "FEMNIST",
         "Hoch",
@@ -26,6 +27,7 @@
         "abismado",
         "asarray",
         "blist",
+        "bneck",
         "cclass",
         "celeba",
         "cfhd",
@@ -47,10 +49,14 @@
         "grwodsl",
         "hier",
         "hiers",
+        "hsigmoid",
+        "hswish",
         "ibwd",
         "ilariab",
+        "inplace",
         "isdigit",
         "jsons",
+        "kaiming",
         "koja",
         "matmul",
         "mkdir",
@@ -60,13 +66,16 @@
         "nikforce",
         "nltk",
         "nltk's",
+        "nolinear",
         "numpy",
         "preprocess",
         "pushshift",
         "pussgurka",
         "pyplot",
+        "relu",
         "robotickilldozr",
         "scipy",
+        "semodule",
         "seqs",
         "slabel",
         "slines",
