--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -35,17 +35,21 @@
         "chash",
         "chlenom",
         "cimages",
+        "ckpt",
         "cldir",
         "coeff",
         "ctot",
+        "cuda",
         "curr",
         "cuser",
         "dtype",
         "elems",
         "embs",
         "eval",
+        "fedela",
         "fname",
         "glist",
+        "gloo",
         "grwodsl",
         "hier",
         "hiers",
@@ -68,6 +72,7 @@
         "nltk's",
         "nolinear",
         "numpy",
+        "optim",
         "preprocess",
         "pushshift",
         "pussgurka",
