--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -25,7 +25,9 @@
                 "2",
                 "--task",
                 "celeba",
-                "--samples",
+                "--act_clts",
+                "10",
+                "--tst_act_clts",
                 "10",
                 "--data_root",
                 "benchmark/datasets/celeba/data",
@@ -44,7 +46,9 @@
                 "2",
                 "--task",
                 "celeba",
-                "--samples",
+                "--act_clts",
+                "10",
+                "--tst_act_clts",
                 "10",
                 "--data_root",
                 "benchmark/datasets/celeba/data",
